fixed gap below search icon in search form

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
 }
 
 #logo {
@@ -77,11 +78,10 @@ header {
     border-top: 2px solid #F2F2F2;
     border-bottom: 2px solid #F2F2F2;
     border-radius: 15px;
-    padding: none;
 }
 
 #searchform i {
-    padding: 10px;
+    padding: 11px 10px 11px 12px;
     background-color: #F2F2F2;
     border-radius : 13px 0px 0px 13px;
 }
